# lib/api-spec/openapi.yaml
@@ -1367,6 +1367,16 @@ components:
         lotDivisor:
           type: integer
           minimum: 1
+        calendarCurrencies:
+          type: array
+          items:
+            type: string
+          nullable: true
+        calendarImpacts:
+          type: array
+          items:
+            type: string
+          nullable: true
       required:
         - id
         - backgroundType
@@ -1398,6 +1408,16 @@ components:
         lotDivisor:
           type: integer
           minimum: 1
+        calendarCurrencies:
+          type: array
+          items:
+            type: string
+          nullable: true
+        calendarImpacts:
+          type: array
+          items:
+            type: string
+          nullable: true
 
     UploadBackgroundResponse:
       type: object
